--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   carousel_slider: ^3.0.0
-  flutter_rating_bar: ^4.0.0
+  flutter_staggered_grid_view: ^0.3.4
+  auto_size_text: ^2.1.0
+
+
 
 
 dev_dependencies:
