--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.0
   carousel_slider: ^3.0.0
-  flutter_staggered_grid_view: ^0.3.4
-  auto_size_text: ^2.1.0
-
-
+  provider: ^5.0.0
+  json_annotation: ^ 3.1.1
+  firebase_core: ^1.0.3
+  cloud_firestore: ^1.0.4
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-flutter:
+  build_runner: ^1.10.9
+  json_serializable: ^3.5.1
 
+flutter:
   uses-material-design: true
   assets:
     - assets/
